# guest-components

./: Cargo.toml  Makefile  aa-config.toml  encryption.key  wasm.patch
attestation-agent/coco_keyprovider/: Cargo.toml
attestation-agent/coco_keyprovider/src/enc_mods/: crypto.rs  kbs.rs  mod.rs
attestation-agent/coco_keyprovider/src/grpc/: mod.rs
attestation-agent/docker/: Dockerfile.keyprovider
image-rs/src/: decrypt.rs  pull.rs
image-rs/src/decoder/: mod.rs
image-rs/src/stream/: mod.rs
tee-wasm-runner/: .gitignore  ACTION_GUIDE.md  BUILD_ISSUE.md  Cargo.toml  ENCRYPTED_WASM_FIX.md  ENCRYPTING_WASM_GUIDE.md  KBS_AUTH_FIX.md  KBS_KEY_FIX.md  KBS_PROTOCOL_FIX.md  KBS_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TDX_BUILD.md  TDX_FEATURE_FIX.md  TDX_PERMISSION_FIX.md  TROUBLESHOOTING.md  WASM_CONFIG_FIX.md  encrypt-image.sh  test-runner.sh
tee-wasm-runner/src/: main.rs
